turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:11: error: not found: value BLACK
	case Color.BLACK => setCouleurSol(BLACK) ;gauche();avance()
                                          ^LangtonsAnt:12: error: not found: value WHITE
	case Color.WHITE => setCouleurSol(WHITE) ;droite();avance()
                                          ^